Fixed header alignment issue

--- a/themes/header.css
+++ b/themes/header.css
@@ -336,7 +336,7 @@ body {
     cursor: pointer;
 } */
 
-@media only screen and (min-width :768px) {
+@media only screen and (min-width :992px) {
     #navbar .menu-burger, #navbar img#albany-logo-mobile {
         display: none;
     }
